--- a/Fair-ex/Pages/Index.cshtml
+++ b/Fair-ex/Pages/Index.cshtml
@@ -5,21 +5,16 @@
 }
 
 
-@using Microsoft.AspNetCore.Components
-@inject NavigationManager Navigation
+
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-    <button class="btn btn-primary" @onclick="NavigateToP">View Products</button>
+    <a asp-page="/Products">Edit</a> |
 
 </div>
 
-@code{
+@{
 
 
-    void NavigateToProdutos()
-    {
-        Navigation.NavigateTo("Produtos");
-    }
 }
